# tg_backup

./: .gitignore  changelog.md  pyproject.toml  readme.md  start.sh
launcher/: world_backup.bat  world_backup.sh  world_backup_win.py
tg_backup/: __init__.py  __main__.py  error.txt  init_tg.py  main.py  setup.py
