[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dependencies = [
  "betterdata",
  "easyselect",
  "gmanka_yml",
  "pyrogram",
  "tgcrypto",
  "humanize",
  "rich",
]
name = "tg_backup"
version = "23.0.0"
authors = [
  { name="gmanka", email="gmankab@gmail.com" },
]
description = "script for backupping files in telegram"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gmankab/tg_backup"
"Documentation" = "https://github.com/gmankab/tg_backup"
"Bug Tracker" = "https://github.com/gmankab/tg_backup/issues"
